// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextArea > should render 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="hidden absolute right-3 bottom-4 z-10 w-0 h-0 border-t-8 -rotate-45 pointer-events-none md:block border-t-theme-secondary-400 border-x-8 border-x-transparent dark:border-t-theme-secondary-700"
    />
    <div
      class="flex relative items-center px-4 space-x-2 w-full rounded border transition-colors duration-200 appearance-none focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <textarea
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base! resize-none min-h-[8rem] md:min-h-auto md:resize-y"
          data-testid="TextArea"
          style="height: 4px;"
          type="text"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render as disabled 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="hidden absolute right-3 bottom-4 z-10 w-0 h-0 border-t-8 -rotate-45 pointer-events-none md:block border-t-theme-secondary-400 border-x-8 border-x-transparent dark:border-t-theme-secondary-700"
    />
    <div
      class="flex relative items-center px-4 space-x-2 w-full rounded border transition-colors duration-200 appearance-none focus-within:ring-1 text-theme-text border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <textarea
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none sm:text-base! min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text"
          data-testid="TextArea"
          disabled=""
          type="text"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render as invalid 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="hidden absolute right-3 bottom-4 z-10 w-0 h-0 border-t-8 -rotate-45 pointer-events-none md:block border-t-theme-secondary-400 border-x-8 border-x-transparent dark:border-t-theme-secondary-700"
    />
    <div
      class="flex relative items-center px-4 space-x-2 w-full rounded border transition-colors duration-200 appearance-none focus-within:ring-1 text-theme-text border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <textarea
          aria-invalid="true"
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base! resize-none min-h-[8rem] md:min-h-auto md:resize-y"
          data-testid="TextArea"
          type="text"
        />
      </div>
      <div
        class="flex absolute right-0 bottom-full items-center mb-2 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
        data-testid="Input__addon-end"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="text-theme-danger-500"
          >
            <div
              style="height: 20px; width: 20px;"
            >
              <svg
                id="circle-exclamation-mark"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 10.5v-5"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 14h0"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
